centered search results, fixed search bar overflow on mobile

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -94,6 +94,7 @@ div.search-banner{
   align-content: center; 
   padding: 60px;
   height: 200px; 
+  overflow: auto;
 
   /* Create the parallax scrolling effect */
   /* background-attachment: fixed; */
@@ -188,7 +189,8 @@ input#ing-name:focus {
 }
 .card-img-overlay:hover{
   transition: box-shadow 0.3s ease-in-out;
-  box-shadow: inset 0 0 0 1000px rgba(18, 18, 18, 0)
+  box-shadow: inset 0 0 0 1000px rgba(18, 18, 18, 0);
+  cursor: pointer;
 }
 
 #results{
@@ -212,13 +214,15 @@ h1.searchtext{
 }
 
 div.respop{
-padding: 60px;
-background-image: url("../assets/jon-moore-5fIoyoKlz7A-unsplash.jpg");
-box-shadow: inset 0 0 0 1000px rgba(18, 18, 18, 0.6);
-background-attachment: fixed;
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
+  text-align: center;
+  /* padding: 60px; */
+  padding: 1em;
+  background-image: url("../assets/jon-moore-5fIoyoKlz7A-unsplash.jpg");
+  box-shadow: inset 0 0 0 1000px rgba(18, 18, 18, 0.6);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 
@@ -229,6 +233,7 @@ background-size: cover;
 
 .search-banner {
   padding: 3em 0em;
+
 }
 
 .search-item {
